# udata-analysis-service

./: Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.circleci/: config.yml
tests/: conftest.py  test_background_tasks.py  test_utils.py
udata_analysis_service/: .env.sample  __init__.py  background_tasks.py  cli.py  consumer.py  producer.py
