[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "udata-analysis-service"
authors = [{name = "Sixte de Maupeou", email = "sixte.de-maupeou@data.gouv.fr"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
    "boto3==1.21.21",
    "celery==5.2.3",
    "click==8.0.4",
    "csv-detective==0.4.5",
    "flake8==4.0.1",
    "flit==3.6.0",
    "kafka-python==2.0.2",
    "pytest==7.1.1",
    "python-dotenv==0.19.2",
    "redis==4.1.4",
    "requests==2.27.1",
    "udata_event_service==0.0.8",
    "pytest-mock==3.7.0",
    "pytest-asyncio==0.18.3"
]

[project.urls]
Home = "https://github.com/sixtedemaupeou/udata-analysis-service"

[tool.flit.module]
name = "udata_analysis_service"

[project.scripts]
 udata-analysis-service = "udata_analysis_service.cli:cli"
