[tool.poetry]
name = "udata-analysis-service"
version = "0.0.1.dev"
description = ""
authors = ["Etalab"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.21.21"
celery = "^5.2.3"
click = "^8.0.4"
csv-detective = "^0.4.5"
flake8 = "^4.0.1"
flit = "^3.6.0"
kafka-python = "^2.0.2"
python-dotenv = "^0.19.2"
redis = "^4.1.4"
requests = "^2.27.1"
udata_event_service = "^0.0.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"
pytest-mock = "^3.8.2"

[tool.poetry.scripts]
udata-analysis-service = "udata_analysis_service.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
